FINISHED THE ASSIGNMENT!

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		
 		<div class="todo">
 			<h1>To Do List</h1>
-			<input name="new-item" type="text" placeholder="New todo item...">
+			<input name="new-item"  class= "listInput" type="text" placeholder="New todo item...">
 			<ul></ul>
 			<p>
 				<span class="total"></span> items, 
